                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 22-10-2005 fixed: fatx limiter is now applied to directory names as well - thanks to soepy.
 - 22-10-2005 added: alac (apple lossless audio codec) support to paplayer. shares dll with the aac codec.
 - 19-10-2005 added: experimental support for multiple paths in my music bookmarks.
                     only hard drive, samba, and xbms paths are allowed, any other are removed when the config is read.
                     DO NOT USE COMMA SEPERATED PATHS.  the config MUST be as follows since comma is a valid smb and xbms character:
                     <bookmark>
                       <name>Music</name>
                       <path>E:\Music</path>
                       <path>smb://workgroup;user:pass@someserver/music</path>
                       <path>xbms://anotherserver:1400/music</path>
                     </bookmark>
 - 18-10-2005 added: Support for D3D Visibility testing from plugins.
 - 17-10-2005 changed/fixed: xbe regions will only be used in my programs (not with xbmc.runxbe nor in my files). avoids a potential freeze on xbe launch.
 - 17-10-2005 added: new visbility condition, system.hasalarm(alarmname). for use in skins.
 - 17-10-2005 added: new builtin command xbmc.cancelalarm(alarmname)
 - 17-10-2005 changed: new alarmclock syntax! xbmc.alarmclock(alarmname,command,time).
 - 17-10-2005 fixed: cancelling an alarm clock would trigger the command.
 - 17-10-2005 changed: sid tag loader now uses both stil.txt and sidlist.csv.
 - 17-10-2005 added: A .sid codec for paplayer (Commodore 64 Music). Based on libsidplay2+resid.
 - 16-10-2005 fixed: context menus in my video windows